fix 代码检视